implemented most of the chatterbox functionalities

--- a/client/styles/styles.css
+++ b/client/styles/styles.css
@@ -97,3 +97,19 @@ div {
     visibility: hidden;
 }
 
+.username:hover {
+    color: #d3d3d3;
+}
+
+.active{
+    color: red;
+    background-color: red;
+}
+
+.userButton {
+    appearance: none;
+    box-shadow: none;
+    border: 0;
+    border-radius: 0px;
+    background: none;
+}
